# youclaw

./: .oxfmtrc.json  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: agent.rs  agent_workspace.rs  errors.rs  filesystem.rs  memory_manager.rs  mod.rs  models.rs  provider.rs  storage.rs  ws.rs
src-tauri/src/backend/agents/: AGENTS.md  context_compactor.rs  context_constants.rs  memory.rs  message_builder.rs  mod.rs  prompt.rs  stream_collector.rs  summarizer.rs  token_estimator.rs  tool_dispatcher.rs  tool_result_processor.rs  turn_execution.rs  turn_start.rs  workspace.rs
src-tauri/src/backend/agents/tools/: bash.rs  edit_file.rs  filesystem_context.rs  filesystem_list_dir.rs  filesystem_read_file.rs  filesystem_write_file.rs  list_directory.rs  memory_get.rs  memory_search.rs  (+13 more)
src-tauri/src/backend/models/: common.rs  config.rs  events.rs  memory.rs  mod.rs  payloads.rs  profile.rs  provider.rs  responses.rs  session.rs  summary.rs  usage.rs  ws.rs
src-tauri/src/backend/providers/: client.rs  mod.rs
src-tauri/src/backend/services/: agent_runtime.rs  memory.rs  mod.rs  profile.rs  provider.rs  session.rs  workspace.rs
src-tauri/src/backend/storage/: memory.rs  mod.rs  profile.rs  providers.rs  schema.rs  sessions.rs  settings.rs  shell.rs  usage.rs
src-tauri/src/backend/ws/: bootstrap.rs  chat.rs  providers.rs  runtime.rs  sessions.rs  usage.rs
(+114 files in other folders)
